fixed div width and alignment, changed page title

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body.signin-body{
     background-color: #E6F2FF;
 }
 .container.signin-container{
-    margin-top: 8%;
+    margin-top: 60px;
 }
 .card.signin-card{
     padding: 40px 0px 20px;
